--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.5.1",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "glob": "^8.0.3",
+    "metro": "^0.73.6",
+    "metro-config": "^0.73.6",
+    "metro-core": "^0.73.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
