--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "metro": "^0.73.6",
     "metro-config": "^0.73.6",
     "metro-core": "^0.73.6",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -25,6 +26,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3"
   },
   "private": true
