--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.5.1",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "glob": "^8.0.3",
@@ -20,6 +22,10 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
